src/CH341DLL.H

typedef	struct	_WIN32_COMMAND {				
	union	{
		ULONG		mFunction;					
		NTSTATUS	mStatus;					
	};
	ULONG			mLength;					
	union	{
		mUSB_SETUP_PKT	mSetupPkt;				
		UCHAR			mBuffer[ mCH341_PACKET_LENGTH ];	
	};
} mWIN32_COMMAND, *mPWIN32_COMMAND;
HANDLE	WINAPI	CH341OpenDevice(	
	ULONG			iIndex );		
VOID	WINAPI	CH341CloseDevice(	
	ULONG			iIndex );		
ULONG	WINAPI	CH341GetVersion( );  
ULONG WINAPI CH341DriverCommand(	
	ULONG iIndex,					
	mPWIN32_COMMAND ioCommand );	
BOOL WINAPI CH341ResetDevice(	
	ULONG iIndex );				
BOOL WINAPI CH341ReadInter(		
	ULONG iIndex,				
	PULONG iStatus );			
BOOL	WINAPI	CH341AbortInter(  
	ULONG			iIndex );  
BOOL	WINAPI	CH341SetParaMode(  
	ULONG			iIndex,  
	ULONG			iMode );  
BOOL	WINAPI	CH341InitParallel(  
	ULONG			iIndex,  
	ULONG			iMode );  
BOOL	WINAPI	CH341ReadData0(  
	ULONG			iIndex,  
	PVOID			oBuffer,  
	PULONG			ioLength );  
BOOL	WINAPI	CH341ReadData1(  
	ULONG			iIndex,  
	PVOID			oBuffer,  
	PULONG			ioLength );  
BOOL	WINAPI	CH341AbortRead(  
	ULONG			iIndex );  
BOOL	WINAPI	CH341WriteData0(  
	ULONG			iIndex,  
	PVOID			iBuffer,  
	PULONG			ioLength );  
BOOL	WINAPI	CH341WriteData1(  
	ULONG			iIndex,  
	PVOID			iBuffer,  
	PULONG			ioLength );  
BOOL	WINAPI	CH341AbortWrite(  
	ULONG			iIndex );  
BOOL	WINAPI	CH341GetStatus(  
	ULONG			iIndex,  
	PULONG			iStatus );  
BOOL	WINAPI	CH341MemReadAddr0(  
	ULONG			iIndex,  
	PVOID			oBuffer,  
	PULONG			ioLength );  
BOOL	WINAPI	CH341MemReadAddr1(  
	ULONG			iIndex,  
	PVOID			oBuffer,  
	PULONG			ioLength );  
BOOL	WINAPI	CH341MemWriteAddr0(  
	ULONG			iIndex,  
	PVOID			iBuffer,  
	PULONG			ioLength );  
BOOL	WINAPI	CH341MemWriteAddr1(  
	ULONG			iIndex,  
	PVOID			iBuffer,  
	PULONG			ioLength );  
BOOL	WINAPI	CH341SetExclusive(  
	ULONG			iIndex,  
	ULONG			iExclusive );  
BOOL	WINAPI	CH341SetTimeout(  
	ULONG			iIndex,  
	ULONG			iWriteTimeout,  
	ULONG			iReadTimeout );  
BOOL WINAPI CH341ReadData(	
	ULONG iIndex,			
	PVOID oBuffer,			
	PULONG ioLength );		
BOOL	WINAPI	CH341WriteData(  
	ULONG			iIndex,  
	PVOID			iBuffer,  
	PULONG			ioLength );  
PVOID	WINAPI	CH341GetDeviceName(  
	ULONG			iIndex );  
ULONG	WINAPI	CH341GetVerIC(  
	ULONG			iIndex );  
BOOL	WINAPI	CH341FlushBuffer(  
	ULONG			iIndex );  
BOOL WINAPI CH341WriteRead(	
	ULONG iIndex,			
	ULONG iWriteLength,		
	PVOID iWriteBuffer,		
	ULONG iReadStep,		
	ULONG iReadTimes,		
	PULONG oReadLength,		
	PVOID oReadBuffer );	
BOOL WINAPI CH341SetStream(	
	ULONG iIndex,			
	ULONG iMode );			
BOOL WINAPI CH341SetDelaymS(	
	ULONG iIndex,				
	ULONG iDelay );				
BOOL	WINAPI	CH341GetInput(  
	ULONG			iIndex,  
	PULONG			iStatus );  
BOOL	WINAPI	CH341SetOutput(  
	ULONG			iIndex,  
	ULONG			iEnable,  
	ULONG			iSetDirOut,  
	ULONG			iSetDataOut );  
BOOL	WINAPI	CH341Set_D5_D0(  
	ULONG			iIndex,  
	ULONG			iSetDirOut,  
	ULONG			iSetDataOut );  
BOOL	WINAPI	CH341StreamSPI3(  
	ULONG			iIndex,
	ULONG			iChipSelect,
	ULONG			iLength,
	PVOID			ioBuffer );
BOOL	WINAPI	CH341StreamSPI4(  
	ULONG			iIndex,  
	ULONG			iChipSelect,  
	ULONG			iLength,  
	PVOID			ioBuffer );  
BOOL	WINAPI	CH341StreamSPI5(  
	ULONG			iIndex,  
	ULONG			iChipSelect,  
	ULONG			iLength,  
	PVOID			ioBuffer,  
	PVOID			ioBuffer2 );  
BOOL	WINAPI	CH341BitStreamSPI(  
	ULONG			iIndex,  
	ULONG			iLength,  
	PVOID			ioBuffer );  
typedef		VOID	( CALLBACK	* mPCH341_NOTIFY_ROUTINE ) (  
	ULONG			iEventStatus );  
BOOL	WINAPI	CH341SetDeviceNotify(  
	ULONG					iIndex,  
	PCHAR					iDeviceID,  
	mPCH341_NOTIFY_ROUTINE	iNotifyRoutine );  